fix: change ratios to make it not die on mobile (even tho idk responsive)

--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -11,11 +11,9 @@
 
     > #cb-wrapper {
         //background-color: $shoot;
-        width: 50%;
+        width: 40%;
         max-width: 400px;
-
         > #coffee-bk {
-            display: block;
             width: 100%;
             height: auto;
             margin: auto;
@@ -23,14 +21,15 @@
     }
 
     > #bt-wrapper {
+        //background-color: $shoot;
         > #start-bt {
-            @include text($wtintd, 4vw);
+            @include text($wtintd, 5vh);
             background-color: $vlight;
             font-weight: bolder;
-            border: 0.5vw solid $vlightb;
-            border-radius: 20vw;
-            padding: 20px 80px;
-            max-width: 240px;
+            border: 0.5vh solid $vlightb;
+            //border-radius: 3vw;
+            border-radius: 1.5vw;
+            padding: 0.5vh 3vw;
         }
     }
 }
